# git-fair

./: GitFair.cabal  README.md  stack.yaml
src/: Main.hs  Options.hs  SplitGroups.hs
