name:                GitFair
version:             0.2.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable git-fair
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Options
                       SplitGroups
                       Paths_GitFair
  
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       process,
                       containers,
                       optparse-applicative,
                       filepath,
                       directory,
                       text,
                       tuple
  
  Ghc-options:  -Wall 
                -funbox-strict-fields 
                -fwrite-ide-info 
                -hiedir=.hie
