cabal-version:       2.4
name:                GitFair
version:             0.5.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

common common-options
  build-depends:       base ^>= 4.16.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable git-fair
  import:              common-options
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Options
                       SplitGroups
                       Paths_GitFair

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       process,
                       containers,
                       optparse-applicative,
                       filepath,
                       directory,
                       text,
                       text-show,
                       tuple

  Ghc-options:  -Wall
                -funbox-strict-fields
                -fwrite-ide-info
                -hiedir=.hie
